reload jokes not working

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <title>Rithm</title>
+
+  <!-- jQuery -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -9,6 +13,9 @@
   {% block content %} 
     <!-- child template content goes here -->
   {% endblock %}
+
+  <!-- External js modules-->
+  <script type="text/javascript" src="/static/main.js" ></script>
 
 </body>
 </html>
