--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <button id="reload-jokes">Reload Joke List</button>
     <ul id="joke-list">
         {% for id, joke in jokes.items() %}
-        <li>{{ joke }}</li><button class="up-vote">Up Vote</button><button class="down-vote">Down Vote</button>
+        <li>{{ joke.joke }}</li><button class="up-vote">Up Vote</button><button class="down-vote">Down Vote</button>
         {% endfor %}
     </ul>
 
